--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "npm run build:css && node index.js",
+    "dev": "npm run build:css && nodemon index.js",
+    "build:css": "npx tailwindcss -i ./src/input.css -o ./public/stylesheets/output.css",
+    "dev:css": "npx tailwindcss -i ./src/input.css -o ./public/stylesheets/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,5 +26,8 @@
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.14"
   }
 }
