--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "tailwindcss": "^3.4.14",
     "zod": "^3.23.8"
   }
