--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xyz-company",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "npm run build:css && node index.js",
     "dev": "npm run build:css && nodemon index.js",
