--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "npm run build:css && node index.js",
+    "start": "npx tailwindcss -i ./src/input.css -o ./public/stylesheets/output.css && node index.js",
     "dev": "npx tailwindcss -i ./src/input.css -o ./public/stylesheets/output.css && nodemon index.js",
     "dev:css": "npx tailwindcss -i ./src/input.css -o ./public/stylesheets/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
